plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group = 'self.starvern'
version = '0.4.2'

repositories {
    mavenCentral()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven {
        url = 'https://jitpack.io'
    }
    maven {
        url = 'https://libraries.minecraft.net'
    }
    maven {
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:23.1.0'
    compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
    compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
    compileOnly 'com.mojang:authlib:1.5.21'
    compileOnly 'me.clip:placeholderapi:2.11.2'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

tasks {
    processResources {
        filesMatching("plugin.yml") {
            def props = [version: version]
            expand props
        }
    }
}
shadowJar {
    archiveFileName = project.name + "-" + findProperty("version") + ".jar";

    relocate 'org.jetbrains.annotations', 'self.starvern.ultimateuserinterface.annotations'
    relocate 'org.intellij.lang.annotations', 'self.starvern.ultimateuserinterface.annotations'
}

compileJava {
    options.encoding = "UTF-8"
    options.release.set(17)
}

artifacts {
    archives shadowJar
}
